--- a/index.html
+++ b/index.html
@@ -20,28 +20,28 @@
 
   <main class="p-4 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 max-w-6xl mx-auto">
     <div class="card-foto">
-      <img src="" alt="" class="w-full h-64 object-cover" />
+      <img src="fotos/IMG-20241014-WA0054.jpg" alt="IMG-20241014-WA0054.jpg" class="w-full h-64 object-cover" />
     </div>
     <div class="card-foto">
-      <img src="" alt="" class="w-full h-64 object-cover" />
-    </div>
-    <div class="card-foto">
-      <img src="" alt="" class="" />
+      <img src="fotos/IMG-20230924-WA0014.jpg" alt="IMG-20230924-WA0014.jpg" class="w-full h-64 object-cover" />
     </div>
     <div class="card-foto">
       <img src="fotos/IMG_8883.JPG" alt="IMG_8883.JPG" class="w-full h-64 object-cover" />
     </div>
     <div class="card-foto">
-      <img src="" alt="" class="w-full h-64 object-cover" />
+      <img src="fotos/09.45.52_d18e6117.jpg" alt="09.45.52_d18e6117.jpg" class="w-full h-64 object-cover" />
+    </div>
+    <div class="card-foto">
+      <img src="fotos/IMG-20240421-WA0026.JPG" alt="IMG-20240421-WA0026.JPG" class="w-full h-64 object-cover" />
+    </div>
+    <div class="card-foto">
+      <img src="fotos/IMG-20240613-WA0007.jpg" alt="IMG-20240613-WA0007.jpg" class="w-full h-64 object-cover" />
+    </div>
+    <div class="card-foto">
+      <img src="fotos/Imagem do WhatsApp 5.jpg" alt="Imagem do WhatsApp 5.jpg" class="w-full h-64 object-cover" />
     </div>
     <div class="card-foto">
       <img src="fotos/IMG_6342.jpg" alt="IMG_6342.JPG" class="w-full h-64 object-cover" />
-    </div>
-    <div class="card-foto">
-      <img src="" alt="" class="w-full h-64 object-cover" />
-    </div>
-    <div class="card-foto">
-      <img src="" alt="" class="w-full h-64 object-cover" />
     </div>
   </main>
 
