Correação na chamada da imagem

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <img src="fotos/09.45.52_d18e6117.jpg" alt="09.45.52_d18e6117.jpg" class="w-full h-64 object-cover" />
     </div>
     <div class="card-foto">
-      <img src="fotos/IMG-20240421-WA0026.JPG" alt="IMG-20240421-WA0026.JPG" class="w-full h-64 object-cover" />
+      <img src="fotos/IMG-20240421-WA0026.jpg" alt="IMG-20240421-WA0026.jpg" class="w-full h-64 object-cover" />
     </div>
     <div class="card-foto">
       <img src="fotos/IMG-20240613-WA0007.jpg" alt="IMG-20240613-WA0007.jpg" class="w-full h-64 object-cover" />
