--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
     Seu navegador não suporta vídeo em HTML5.
   </video>
 
-  <!-- Botão de áudio -->
-  <button id="audioToggle" class="absolute top-4 right-4 z-50 bg-white bg-opacity-30 hover:bg-opacity-50 p-3 rounded-full shadow-lg transition">
+  <!-- Botão de áudio sempre no canto inferior direito -->
+  <button id="audioToggle" class="fixed bottom-4 right-4 z-50 bg-white bg-opacity-30 hover:bg-opacity-50 p-3 rounded-full shadow-lg transition backdrop-blur">
     <span id="audioIcon">🔇</span>
   </button>
 
   <!-- Cabeçalho -->
-  <header class="text-center py-6">
+  <header class="text-center py-6 relative z-10">
     <h1 class="text-4xl font-bold">Para o amor da minha vida ❤️</h1>
     <p class="text-lg text-white-200 mt-2">Cada momento ao seu lado é inesquecível</p>
   </header>
 
   <!-- Galeria de fotos -->
-  <main class="p-4 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 max-w-6xl mx-auto">
+  <main class="p-4 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 max-w-6xl mx-auto relative z-10">
     <div class="card-foto">
       <img src="fotos/IMG-20241014-WA0054.jpg" alt="IMG-20241014-WA0054.jpg" class="w-full h-64 object-cover" />
     </div>
@@ -55,7 +55,7 @@
   </main>
 
   <!-- Botão surpresa e mensagem -->
-  <div class="flex flex-col items-center mt-10">
+  <div class="flex flex-col items-center mt-10 relative z-10">
     <button id="surpriseBtn" class="bg-gradient-to-r from-pink-500 to-purple-500 hover:scale-105 text-white font-bold py-3 px-6 rounded-full shadow-lg transition duration-300">
       Clique Aqui 💖
     </button>
