Mudança na caixa de texto para ficar melhor em dispositivos menores

--- a/index.html
+++ b/index.html
@@ -1,134 +1,182 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Para o amor da minha vida ❤️</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body class="bg-gradient-to-br from-blue-600 to-purple-700 text-white min-h-screen flex flex-col relative">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Para o amor da minha vida ❤️</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body class="bg-gradient-to-br from-blue-600 to-purple-700 text-white min-h-screen flex flex-col relative">
 
-  <!-- Vídeo com controle de som -->
-  <video id="video-bg" autoplay loop class="w-full h-auto">
-    <source src="video.mp4" type="video/mp4" />
-    Seu navegador não suporta vídeo em HTML5.
-  </video>
+    <!-- Vídeo com controle de som -->
+    <video id="video-bg" autoplay loop class="w-full h-auto">
+      <source src="video.mp4" type="video/mp4" />
+      Seu navegador não suporta vídeo em HTML5.
+    </video>
 
-  <!-- Botão de áudio sempre no canto inferior direito -->
-  <button id="audioToggle" class="fixed bottom-4 right-4 z-50 bg-white bg-opacity-30 hover:bg-opacity-50 p-3 rounded-full shadow-lg transition backdrop-blur">
-    <span id="audioIcon">🔇</span>
-  </button>
-
-  <!-- Cabeçalho -->
-  <header class="text-center py-6 relative z-10">
-    <h1 class="text-4xl font-bold">Para o amor da minha vida ❤️</h1>
-    <p class="text-lg text-white-200 mt-2">Cada momento ao seu lado é inesquecível</p>
-  </header>
-
-  <!-- Galeria de fotos -->
-  <main class="p-4 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 max-w-6xl mx-auto relative z-10">
-    <div class="card-foto">
-      <img src="fotos/IMG-20241014-WA0054.jpg" alt="IMG-20241014-WA0054.jpg" class="w-full h-64 object-cover" />
-    </div>
-    <div class="card-foto">
-      <img src="fotos/IMG-20230924-WA0014.jpg" alt="IMG-20230924-WA0014.jpg" class="w-full h-64 object-cover" />
-    </div>
-    <div class="card-foto">
-      <img src="fotos/IMG_8883.JPG" alt="IMG_8883.JPG" class="w-full h-64 object-cover" />
-    </div>
-    <div class="card-foto">
-      <img src="fotos/09.45.52_d18e6117.jpg" alt="09.45.52_d18e6117.jpg" class="w-full h-64 object-cover" />
-    </div>
-    <div class="card-foto">
-      <img src="fotos/IMG-20240421-WA0026.jpg" alt="IMG-20240421-WA0026.jpg" class="w-full h-64 object-cover" />
-    </div>
-    <div class="card-foto">
-      <img src="fotos/IMG-20240613-WA0007.jpg" alt="IMG-20240613-WA0007.jpg" class="w-full h-64 object-cover" />
-    </div>
-    <div class="card-foto">
-      <img src="fotos/Imagem do WhatsApp 5.jpg" alt="Imagem do WhatsApp 5.jpg" class="w-full h-64 object-cover" />
-    </div>
-    <div class="card-foto">
-      <img src="fotos/IMG_6342.jpg" alt="IMG_6342.JPG" class="w-full h-64 object-cover" />
-    </div>
-  </main>
-
-  <!-- Botão surpresa e mensagem -->
-  <div class="flex flex-col items-center mt-10 relative z-10">
-    <button id="surpriseBtn" class="bg-gradient-to-r from-pink-500 to-purple-500 hover:scale-105 text-white font-bold py-3 px-6 rounded-full shadow-lg transition duration-300">
-      Clique Aqui 💖
+    <!-- Botão de áudio com posicionamento responsivo -->
+    <button id="audioToggle" class="fixed z-50 bg-white bg-opacity-30 hover:bg-opacity-50 p-3 rounded-full shadow-lg transition backdrop-blur">
+      <span id="audioIcon">🔇</span>
     </button>
 
-    <div class="mt-6 animate-bounce text-5xl">💖</div>
-    <p class="text-white mt-2 italic">Você me faz feliz de um jeito que ninguém mais faz 💌</p>
+    <!-- Cabeçalho -->
+    <header id="header" class="text-center py-6 relative z-10">
+      <h1 class="text-4xl font-bold">Para o amor da minha vida ❤️</h1>
+      <p class="text-lg text-white-200 mt-2">Cada momento ao seu lado é inesquecível</p>
+    </header>
 
-    <div id="message" class="mt-8 hidden text-center text-xl max-w-md bg-white text-purple-800 p-6 rounded-xl shadow-lg">
-      Você é a melhor parte da minha vida, e sem você tudo perde o brilho. Feliz aniversário, meu amor!
+    <!-- Galeria de fotos -->
+    <main class="p-4 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 max-w-6xl mx-auto relative z-10">
+      <div class="card-foto">
+        <img src="fotos/IMG-20241014-WA0054.jpg" alt="IMG-20241014-WA0054.jpg" class="w-full h-64 object-cover" />
+      </div>
+      <div class="card-foto">
+        <img src="fotos/IMG-20230924-WA0014.jpg" alt="IMG-20230924-WA0014.jpg" class="w-full h-64 object-cover" />
+      </div>
+      <div class="card-foto">
+        <img src="fotos/IMG_8883.JPG" alt="IMG_8883.JPG" class="w-full h-64 object-cover" />
+      </div>
+      <div class="card-foto">
+        <img src="fotos/09.45.52_d18e6117.jpg" alt="09.45.52_d18e6117.jpg" class="w-full h-64 object-cover" />
+      </div>
+      <div class="card-foto">
+        <img src="fotos/IMG-20240421-WA0026.jpg" alt="IMG-20240421-WA0026.jpg" class="w-full h-64 object-cover" />
+      </div>
+      <div class="card-foto">
+        <img src="fotos/IMG-20240613-WA0007.jpg" alt="IMG-20240613-WA0007.jpg" class="w-full h-64 object-cover" />
+      </div>
+      <div class="card-foto">
+        <img src="fotos/Imagem do WhatsApp 5.jpg" alt="Imagem do WhatsApp 5.jpg" class="w-full h-64 object-cover" />
+      </div>
+      <div class="card-foto">
+        <img src="fotos/IMG_6342.jpg" alt="IMG_6342.JPG" class="w-full h-64 object-cover" />
+      </div>
+    </main>
+
+    <!-- Botão surpresa e mensagem -->
+    <div class="flex flex-col items-center mt-10 relative z-10">
+      <button id="surpriseBtn" class="bg-gradient-to-r from-pink-500 to-purple-500 hover:scale-105 text-white font-bold py-3 px-6 rounded-full shadow-lg transition duration-300">
+        Clique Aqui 💖
+      </button>
+
+      <div class="mt-6 animate-bounce text-5xl">💖</div>
+      <p class="text-white mt-2 italic">Você me faz feliz de um jeito que ninguém mais faz 💌</p>
+    
+
+      <div id="message" class="mt-8 hidden text-center text-xl max-w-md mx-4 bg-white text-purple-800 p-6 rounded-xl shadow-lg">
+        Você é a melhor parte da minha vida, e sem você tudo perde o brilho. Feliz aniversário, meu amor!
+      </div>
     </div>
-  </div>
-  <br>
+    <br>
 
-  <!-- Scripts -->
-  <script>
-    // Controle do botão surpresa
-    const btn = document.getElementById("surpriseBtn");
-    const msg = document.getElementById("message");
+    <!-- Scripts -->
+    <script>
+      // Controle do botão surpresa
+      const btn = document.getElementById("surpriseBtn");
+      const msg = document.getElementById("message");
 
-    function createHeart() {
-      const heart = document.createElement("div");
-      heart.classList.add("heart");
-      heart.textContent = "❤️";
-      heart.style.position = "fixed";
-      heart.style.left = Math.random() * 100 + "vw";
-      heart.style.bottom = "0";
-      heart.style.fontSize = "2rem";
-      heart.style.animation = "rise 5s ease-in forwards";
-      document.body.appendChild(heart);
-      setTimeout(() => heart.remove(), 5000);
-    }
-
-    function startHearts() {
-      setInterval(createHeart, 400);
-    }
-
-    btn.addEventListener("click", () => {
-      msg.classList.remove("hidden");
-      startHearts();
-    });
-
-    // Controle de som do vídeo
-    const video = document.getElementById("video-bg");
-    const toggleBtn = document.getElementById("audioToggle");
-    const audioIcon = document.getElementById("audioIcon");
-
-    video.muted = true;
-
-    toggleBtn.addEventListener("click", () => {
-      video.muted = !video.muted;
-      audioIcon.textContent = video.muted ? "🔇" : "🔊";
-    });
-  </script>
-
-  <!-- Estilos adicionais (para o efeito de coração subindo) -->
-  <style>
-    @keyframes rise {
-      0% {
-        transform: translateY(0);
-        opacity: 1;
+      function createHeart() {
+        const heart = document.createElement("div");
+        heart.classList.add("heart");
+        heart.textContent = "❤️";
+        heart.style.position = "fixed";
+        heart.style.left = Math.random() * 100 + "vw";
+        heart.style.bottom = "0";
+        heart.style.fontSize = "2rem";
+        heart.style.animation = "rise 5s ease-in forwards";
+        document.body.appendChild(heart);
+        setTimeout(() => heart.remove(), 5000);
       }
-      100% {
-        transform: translateY(-100vh);
-        opacity: 0;
+
+      function startHearts() {
+        setInterval(createHeart, 400);
       }
-    }
 
-    .heart {
-      position: fixed;
-      z-index: 100;
-      animation: rise 5s ease-in forwards;
-    }
-  </style>
+      btn.addEventListener("click", () => {
+        msg.classList.remove("hidden");
+        startHearts();
+      });
 
-</body>
+      // Controle de som do vídeo
+      const video = document.getElementById("video-bg");
+      const toggleBtn = document.getElementById("audioToggle");
+      const audioIcon = document.getElementById("audioIcon");
+
+      video.muted = true;
+
+      toggleBtn.addEventListener("click", () => {
+        video.muted = !video.muted;
+        audioIcon.textContent = video.muted ? "🔇" : "🔊";
+      });
+
+      // Função para posicionar o botão de áudio responsivamente
+      function positionAudioButton() {
+        const isMobile = window.innerWidth < 768; // Telas menores que 768px
+        const header = document.getElementById("header");
+        const surpriseBtn = document.getElementById("surpriseBtn");
+        const headerRect = header.getBoundingClientRect();
+        const surpriseBtnRect = surpriseBtn.getBoundingClientRect();
+        const scrollY = window.scrollY;
+
+        if (isMobile) {
+          // Em dispositivos móveis
+          if (headerRect.bottom > 0) {
+            // Se o header ainda está visível, posiciona o botão no canto inferior direito
+            toggleBtn.style.top = 'auto';
+            toggleBtn.style.bottom = '1rem';
+            toggleBtn.style.right = '1rem';
+            toggleBtn.style.left = 'auto';
+          } else {
+            // Se o header saiu da tela, posiciona no canto superior direito
+            // Mas limita a posição para não ir além do botão "Clique Aqui"
+            const maxTop = Math.max(surpriseBtnRect.top - 60, 1 * 16); // 1rem = 16px
+            toggleBtn.style.top = Math.min(1 * 16, maxTop) + 'px';
+            toggleBtn.style.bottom = 'auto';
+            toggleBtn.style.right = '1rem';
+            toggleBtn.style.left = 'auto';
+          }
+        } else {
+          // Em telas maiores, mantém sempre no canto inferior direito
+          toggleBtn.style.top = 'auto';
+          toggleBtn.style.bottom = '1rem';
+          toggleBtn.style.right = '1rem';
+          toggleBtn.style.left = 'auto';
+        }
+      }
+
+      // Posiciona o botão inicialmente
+      positionAudioButton();
+
+      // Reposiciona o botão quando a tela é redimensionada ou quando há scroll
+      window.addEventListener('resize', positionAudioButton);
+      window.addEventListener('scroll', positionAudioButton);
+    </script>
+
+    <!-- Estilos adicionais (para o efeito de coração subindo) -->
+    <style>
+      @keyframes rise {
+        0% {
+          transform: translateY(0);
+          opacity: 1;
+        }
+        100% {
+          transform: translateY(-100vh);
+          opacity: 0;
+        }
+      }
+
+      .heart {
+        position: fixed;
+        z-index: 100;
+        animation: rise 5s ease-in forwards;
+      }
+
+      /* Transição suave para o botão de áudio */
+      #audioToggle {
+        transition: all 0.3s ease;
+      }
+    </style>
+
+  </body>
 </html>
