Resolução do problema - conflito com sobreposição do tailwind na main

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     </header>
 
     
-    <main class="p-4 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 max-w-6xl mx-auto relative z-10">
+    <main class="relative z-10">
       
       <div class="card-foto">
-        <div class="flip-card flip-horizontal-left w-full h-64">
+        <div class="flip-card flip-horizontal-left">
           <div class="flip-card-inner">
             <div class="flip-card-front">
               <img src="fotos/IMG_6342.jpg" alt="Uno card Front" />
@@ -51,7 +51,7 @@
       </div>
 
       <div  class="card-foto">
-        <div class="flip-card flip-horizontal-left w-full h-64">
+        <div class="flip-card flip-horizontal-left">
           <div class="flip-card-inner">
             <div class="flip-card-front">
               <img src="fotos/IMG-20241014-WA0054.jpg" alt="Uno card Front" />
@@ -64,7 +64,7 @@
       </div>
 
       <div  class="card-foto">
-        <div class="flip-card flip-horizontal-left w-full h-64">
+        <div class="flip-card flip-horizontal-left">
           <div class="flip-card-inner">
             <div class="flip-card-front">
               <img src="fotos/IMG-20230924-WA0014.jpg" alt="Uno card Front" />
@@ -77,7 +77,7 @@
       </div>
 
       <div  class="card-foto">
-        <div class="flip-card flip-horizontal-left w-full h-64">
+        <div class="flip-card flip-horizontal-left">
           <div class="flip-card-inner">
             <div class="flip-card-front">
               <img src="fotos/IMG_8883.JPG" alt="Uno card Front" />
@@ -90,7 +90,7 @@
       </div>
 
       <div class="card-foto">
-        <div class="flip-card flip-horizontal-left w-full h-64">
+        <div class="flip-card flip-horizontal-left">
           <div class="flip-card-inner">
             <div class="flip-card-front">
               <img src="fotos/09.45.52_d18e6117.jpg" alt="Uno card Front" />
@@ -103,7 +103,7 @@
       </div>
 
       <div class="card-foto">
-        <div class="flip-card flip-horizontal-left w-full h-64">
+        <div class="flip-card flip-horizontal-left">
           <div class="flip-card-inner">
             <div class="flip-card-front">
               <img src="fotos/IMG-20240421-WA0026.jpg" alt="Uno card Front" />
@@ -116,7 +116,7 @@
       </div>
 
       <div class="card-foto">
-        <div class="flip-card flip-horizontal-left w-full h-64">
+        <div class="flip-card flip-horizontal-left">
           <div class="flip-card-inner">
             <div class="flip-card-front">
               <img src="fotos/IMG-20240613-WA0007.jpg" alt="Uno card Front" />
@@ -129,7 +129,7 @@
       </div>
 
       <div class="card-foto">
-        <div class="flip-card flip-horizontal-left w-full h-64">
+        <div class="flip-card flip-horizontal-left">
           <div class="flip-card-inner">
             <div class="flip-card-front">
               <img src="fotos/Imagem do WhatsApp 5.jpg" alt="Uno card Front" />
