Teste de imagens para o verso

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <img src="fotos/IMG_6342.jpg" alt="Imagem da Frente" />
             </div>
             <div class="flip-card-back">
-              <img src="fotos/IMG_6342.jpg" alt="Imagem escondida" />
+              <img src="fotos/Soluço.png" alt="Imagem escondida" />
             </div>
           </div>
         </div>
@@ -57,7 +57,7 @@
               <img src="fotos/IMG-20241014-WA0054.jpg" alt="Imagem da Frente" />
             </div>
             <div class="flip-card-back">
-              <img src="fotos/IMG_6342.jpg" alt="Imagem escondida" />
+              <img src="fotos/Soluço.png" alt="Imagem escondida" />
             </div>
           </div>
         </div>
