Atualização final da página

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <img src="fotos/IMG_6342.jpg" alt="Imagem da Frente" />
             </div>
             <div class="flip-card-back">
-              <img src="fotos/Soluço.png" alt="Imagem escondida" />
+              <img src="fotos/1.png" alt="Imagem escondida" />
             </div>
           </div>
         </div>
@@ -57,7 +57,7 @@
               <img src="fotos/IMG-20241014-WA0054.jpg" alt="Imagem da Frente" />
             </div>
             <div class="flip-card-back">
-              <img src="fotos/Soluço.png" alt="Imagem escondida" />
+              <img src="fotos/2.png" alt="Imagem escondida" />
             </div>
           </div>
         </div>
@@ -70,7 +70,7 @@
               <img src="fotos/IMG-20230924-WA0014.jpg" alt="Imagem da Frente" />
             </div>
             <div class="flip-card-back">
-              <img src="fotos/IMG_6342.jpg" alt="Imagem escondida" />
+              <img src="fotos/3.png" alt="Imagem escondida" />
             </div>
           </div>
         </div>
@@ -83,7 +83,7 @@
               <img src="fotos/IMG_8883.JPG" alt="Imagem da Frente" />
             </div>
             <div class="flip-card-back">
-              <img src="fotos/IMG_6342.jpg" alt="Imagem escondida" />
+              <img src="fotos/4.png" alt="Imagem escondida" />
             </div>
           </div>
         </div>
@@ -96,7 +96,7 @@
               <img src="fotos/09.45.52_d18e6117.jpg" alt="Imagem da Frente" />
             </div>
             <div class="flip-card-back">
-              <img src="fotos/IMG_6342.jpg" alt="Imagem escondida" />
+              <img src="fotos/5.png" alt="Imagem escondida" />
             </div>
           </div>
         </div>
@@ -109,7 +109,7 @@
               <img src="fotos/IMG-20240421-WA0026.jpg" alt="Imagem da Frente" />
             </div>
             <div class="flip-card-back">
-              <img src="fotos/IMG_6342.jpg" alt="Imagem escondida" />
+              <img src="fotos/6.png" alt="Imagem escondida" />
             </div>
           </div>
         </div>
@@ -122,7 +122,7 @@
               <img src="fotos/IMG-20240613-WA0007.jpg" alt="Imagem da Frente" />
             </div>
             <div class="flip-card-back">
-              <img src="fotos/IMG_6342.jpg" alt="Imagem escondida" />
+              <img src="fotos/7.png" alt="Imagem escondida" />
             </div>
           </div>
         </div>
@@ -135,7 +135,7 @@
               <img src="fotos/Imagem do WhatsApp 5.jpg" alt="Imagem da Frente" />
             </div>
             <div class="flip-card-back">
-              <img src="fotos/IMG_6342.jpg" alt="Imagem escondida" />
+              <img src="fotos/8.png" alt="Imagem escondida" />
             </div>
           </div>
         </div>
